--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
 <link rel="icon" type="image/png" href="img/favicon.png" />
 <link rel="stylesheet" href="css/common.css">
 <link rel="stylesheet" href="css/app.css">
-<link rel="stylesheet" href="css/Aristo/jquery-ui-1.8.7.custom.css" />
+<link rel="stylesheet" href="css/custom/jquery-ui.min.css" />
+<link rel="stylesheet" href="css/custom/jquery-ui.theme.min.css" />
 <link rel="stylesheet" href="css/minicolors/jquery.miniColors.css">
 
 <script id="template-float-panel" type="text/x-jquery-tmpl">
